@@ -1,3 +1,6 @@
+Sat Jun 11 13:05:12 CEST 2011
+	Replacing use of sscanf by strtoul (#1688). -CG/bplant
+
 Fri Jun  3 15:26:42 CEST 2011
 	Adding MHD_CONNECTION_INFO_DAEMON to obtain MHD_Daemon
 	responsible for a given connection. -CG
